# eko

./: .gitignore  .prettierignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
concepts/: _lab.html  icon.html  skin-ambient.html  skin-console.html  skin-deck.html  skin-editorial.html  skin-glass.html  skin-hardware.html  skin-instrument.html  skin-japandi.html  skin-liquid.html  skin-machined.html  skin-midnight.html  skin-studio-app.html  skin-studio-dark.html  skin-studio-designsystem.html  skin-studio-knob-match.html  skin-studio-knobs.html  skin-studio-library.html  skin-studio-mounted.html  skin-studio.html  skins.html  studio-LATEST.html  studio-player.html
docs/: QA-CHECKLIST.md  RELEASE.md  ROADMAP.md  THEME-BLUEPRINT.md  skin-architecture.md  skin-craft.md  skinning.md  studio-skin-status.md
docs/architecture/: gapless.md  overview.md  replaygain.md  resume-session.md
docs/architecture/adr/: 0001-one-native-rust-audio-engine.md  0002-coreaudio-nominal-rate-matching.md  0003-mit-license-with-brand-notice.md  0004-bespoke-static-docs.md  0005-tauri-2-over-electron-or-native.md  README.md
packaging/homebrew/: eko.rb
site/: docs.html  index.html  mobile.html  web-player.html
site/assets/: README.md  eko-loop.flac
src/: App.css  App.tsx  features.test.ts  main.tsx  signalPath.test.ts  types.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: biquad.rs  broadcast.rs  coreaudio.rs  engine.rs  lib.rs  main.rs  media.rs  metadata.rs  stream.rs
src/audio/: audioFeatures.ts  constants.ts  loader.ts  media.ts  nativeEngine.ts
src/hooks/: useConnect.ts  useEq.ts  useLibrary.ts  useMusicSource.ts  useNativeMenu.ts  useNowPlaying.ts  useQueue.ts  useScrub.ts  useSignalPath.ts  useSleepTimerMenu.ts  useSpectrum.ts  useTransport.ts  useVolume.ts
src/lib/: format.ts  lyrics.ts  roundRectPolyfill.ts
src/local/: useLocal.ts
src/player/: ContextMenu.tsx  DeckShell.tsx  DeckView.tsx  LibraryView.tsx  LocalCover.tsx  LyricsPanel.tsx  Marquee.tsx  Meter.tsx  MiniEq.tsx  MiniWindow.tsx  PlayerApp.tsx  QueuePanel.tsx  Sidebar.tsx  SignalPath.tsx  SleepTimerControl.tsx  Slot.tsx  Spectrum.tsx  ThemeHost.tsx  ThemeSwitcher.tsx  TopBar.tsx  TransportBar.tsx  TransportShell.tsx  UpdatePanel.tsx  neu.css
src/player/porcelain/: PorcelainShell.tsx
src/player/studio/: StudioDeck.module.css  StudioDeck.tsx  StudioLibrary.module.css  StudioLibrary.tsx  StudioQueue.module.css  StudioQueue.tsx  StudioSidebar.module.css  StudioSidebar.tsx  StudioTopBar.module.css  StudioTopBar.tsx  StudioTransport.module.css  StudioTransport.tsx  studio-tokens.css  studio.css
src/player/variants/: porcelain.tsx
src/pro-stub/: index.ts
src/skin/: feeds.ts  index.ts  parity.test.ts  playerConfig.test.ts  playerConfig.ts  presets.ts  registerThemes.ts  registerVariants.ts  registry.ts  types.ts  variants.test.ts  variants.ts  vocabulary.ts
src/store/: persist.ts  usePlayerStore.ts  useUiStore.ts  useUpdaterStore.ts
src/subsonic/: client.ts  serverList.test.ts  serverList.ts  useSubsonic.ts
src/windows/: ConnectPanel.tsx  ManageServersPanel.tsx
